iter1-промежут вывод песни с пагинацией
