# docs/swagger.json
@@ -82,6 +82,7 @@
         },
         "/songs/{songName}": {
             "put": {
+                "description": "Обновляет данные существующей песни по имени. Поля, которые не переданы, останутся без изменений.",
                 "parameters": [
                     {
                         "type": "string",
@@ -259,6 +260,18 @@
                 }
             }
         },
+        "models.SongText": {
+            "type": "object",
+            "properties": {
+                "verses": {
+                    "description": "Срез для хранения куплетов",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "models.SongUpdateResponse": {
             "type": "object",
             "properties": {
@@ -275,7 +288,12 @@
                     "type": "string"
                 },
                 "text": {
-                    "type": "string"
+                    "description": "Измените на SongText",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.SongText"
+                        }
+                    ]
                 }
             }
         }
